k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jacksfitnessapp-frontend-service
  namespace: jacksfitnessapp
spec:
  selector:
    app: jacksfitnessapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
