k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jacksfitnessapp-ingress
  namespace: jacksfitnessapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: jacksfitnessapp.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jacksfitnessapp-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jacksfitnessapp-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - jacksfitnessapp.com
      secretName: jacksfitnessapp-tls
